add autoplay for video

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           </div>
 
           <div style="max-height: 420px" class="video-container">
-            <video class="video" playsinline>
+            <video class="video" playsinline autoplay>
               <source src="./img/Video4.mov" type="video/mp4" />
             </video>
           </div>
@@ -287,7 +287,7 @@
           </div>
 
           <div style="max-height: 420px" class="video-container">
-            <video class="video" playsinline>
+            <video class="video" playsinline autoplay>
               <source src="./img/Video1.mp4" type="video/mp4" />
             </video>
           </div>
@@ -299,7 +299,7 @@
             <p id="animatedText">In a motivating package</p>
           </div>
           <div class="video-container">
-            <video class="video" playsinline>
+            <video class="video" playsinline autoplay>
               <source src="./img/Video2.mp4" type="video/mp4" />
             </video>
           </div>
