--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         display: flex;
         max-width: 600px;
         width: 100%;
-        height: 400px;
+        height: 100%;
         margin: auto;
         overflow: hidden;
       }
@@ -48,9 +48,9 @@
         top: 0;
         left: 50%;
         transform: translateX(-50%);
-        max-width: 450px;
+        max-width: 426px;
         width: 100%;
-        max-height: 440px;
+        max-height: 884px;
         height: 100%;
         border-radius: 10px;
         transition: transform 0.6s ease, opacity 0.6s ease;
@@ -58,6 +58,7 @@
         font-weight: 700;
         text-transform: uppercase;
         user-select: none;
+        aspect-ratio: 426 / 884;
       }
 
       .list li::before {
@@ -66,67 +67,90 @@
         top: 0;
         left: 50%;
         transform: translateX(-50%);
-        max-width: 269px;
-        max-height: 400px;
         width: 100%;
-        height: 100%;
-        background: url("./img/Iphone14.png") no-repeat center center;
-        background-size: 100% 100%;
+        height: auto;
+        aspect-ratio: 426 / 884;
+        background: url("./img/Group55.png") no-repeat center center;
+        background-size: contain;
         z-index: 1;
         pointer-events: none;
       }
 
-      /* позиції */
+      .list .act {
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
       .hide {
-        transform: translateX(-420px) scale(0.7);
-        opacity: 0;
-        z-index: 1;
-      }
-      .prev {
-        transform: translateX(-60px) scale(0.85);
-        opacity: 0.5;
-        z-index: 2;
-        cursor: pointer;
-      }
-      .act {
-        transform: scale(1);
-        opacity: 1;
-        z-index: 3;
-      }
-      .next {
-        transform: translateX(60px) scale(0.85);
-        opacity: 0.5;
-        z-index: 2;
-        cursor: pointer;
-      }
-      .new-next {
-        transform: translateX(420px) scale(0.7);
+        transform: translateX(-400px) scale(0.6);
         opacity: 0;
         z-index: 1;
       }
 
+      .prev {
+        transform: translateX(-500px) scale(0.85) !important;
+        opacity: 0.5;
+        z-index: 2;
+      }
+      /* активний */
+      .act {
+        transform: translateX(0) scale(1);
+        opacity: 1;
+        z-index: 3;
+      }
+      /* правий видимий */
+      .next {
+        transform: translateX(80px) scale(0.85) !important;
+        opacity: 0.5;
+        z-index: 2;
+      }
+      /* невидимий справа */
+      .new-next {
+        transform: translateX(400px) scale(0.6);
+        opacity: 0;
+        z-index: 1;
+      }
+
+      /* плавний перехід */
+      .list li {
+        transition: transform 0.6s ease, opacity 0.6s ease;
+      }
+
+      .list li.slide-left {
+        animation: slideOutLeft 0.6s forwards;
+      }
+      .list li.slide-right {
+        animation: slideOutRight 0.6s forwards;
+      }
+
+      /* позиції */
+      /* невидимий зліва */
+
       .item {
         position: relative;
-        max-width: 240px;
+        max-width: 426px;
+        max-height: 884px;
+        height: 100%;
         width: 100%;
         border-radius: 30px;
         overflow: hidden;
       }
       .video-container {
-        max-width: 240px;
-        max-height: 480px;
+        max-width: 426px;
+        max-height: 884px;
         width: 100%;
         height: 100%;
         overflow: hidden;
         border-radius: 50px;
       }
       .video {
-        max-width: 250px;
-        max-height: 420px;
+        max-width: 420px;
+        max-height: 874px;
         width: 100%;
         height: 100%;
         object-fit: cover;
         display: block;
+        border-radius: 70px;
       }
       .video img {
         width: 100%;
@@ -157,9 +181,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        max-width: 200px;
+        max-width: 280px;
         width: 100%;
-        padding: 15px 5px;
+        padding: 35px 5px;
         background-color: #000;
         color: #fff;
         text-decoration: none;
@@ -168,19 +192,33 @@
         text-align: center;
         transition: background-color 0.3s ease;
       }
+
+      .btn-small {
+        padding: 25px 5px;
+        font-size: 10px;
+      }
+
       .btn img {
         max-width: 200px;
         width: 100%;
+      }
+
+      .container {
+        display: flex;
+        justify-content: end;
+        max-height: 874px;
+        height: 100%;
+        padding-bottom: 20% !important;
       }
 
       .text-container {
         position: absolute;
         max-width: 90%;
         width: 100%;
-        top: 40px;
+        top: 70px;
         left: 50%;
         transform: translateX(-50%);
-        padding: 12px 20px;
+        padding: 15px 25px;
         border-radius: 12px;
         background: rgba(0, 0, 0, 0.6);
         color: #fff;
@@ -192,7 +230,7 @@
       }
 
       .text-container p {
-        font-size: clamp(20px, 5vw, 20px);
+        font-size: clamp(16px, 5vw, 20px);
         text-shadow: 0 0 5px rgba(0, 0, 0, 0.6), 0 0 15px rgba(0, 0, 0, 0.4);
       }
       .text-container span {
@@ -202,21 +240,103 @@
         animation: bounceIn 0.6s forwards;
       }
 
-      @keyframes bounceIn {
-        0% {
+      @keyframes slideOutLeft {
+        from {
+          transform: translateX(0) scale(1);
+          opacity: 1;
+          z-index: 3;
+        }
+        to {
+          transform: translateX(-420px) scale(0.85);
+          opacity: 0.5;
+          z-index: 2;
+        }
+      }
+
+      @keyframes slideOutRight {
+        from {
+          transform: translateX(0) scale(1);
+          opacity: 1;
+          z-index: 3;
+        }
+        to {
+          transform: translateX(120px) scale(0.85);
+          opacity: 0.5;
+          z-index: 2;
+        }
+      }
+
+      .list li.slide-left {
+        animation: slideOutLeft 0.6s forwards;
+      }
+      .list li.slide-right {
+        animation: slideOutRight 0.6s forwards;
+      }
+
+      .item,
+      .video-container {
+        width: 100%;
+        height: 100%;
+      }
+
+      .video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* підлаштовує відео під контейнер */
+      }
+
+      @keyframes slideInLeft {
+        from {
           opacity: 0;
-          transform: translateY(30px);
+          transform: translateX(-30px);
         }
-        50% {
+        to {
           opacity: 1;
-          transform: translateY(-10px);
+          transform: translateX(0);
         }
-        70% {
-          transform: translateY(5px);
+      }
+
+      .text-container span {
+        display: inline-block;
+        opacity: 0;
+        transform: translateX(-30px);
+        animation: slideInLeft 0.5s forwards;
+      }
+
+      @media screen and (max-width: 480px) {
+        .list {
+          max-width: 100%;
+          height: 100%;
         }
-        100% {
-          transform: translateY(0);
-          opacity: 1;
+        .list li {
+          max-width: 280px;
+          max-height: 640px;
+          height: 100%;
+          border-radius: 50px;
+        }
+        .list li::before {
+          width: 100%;
+          height: auto;
+          aspect-ratio: 426 / 884;
+        }
+        .video-container {
+          max-width: 320px;
+          max-height: 640px;
+          height: 100%;
+          border-radius: 50px;
+          overflow: hidden;
+        }
+        .video {
+          max-width: 314px;
+          max-height: 580px;
+          height: 100%;
+          border-radius: 50px;
+        }
+
+        .prev {
+          transform: translateX(-300px) scale(0.85) !important;
+          opacity: 0.5;
+          z-index: 2;
         }
       }
     </style>
@@ -241,18 +361,17 @@
       </li>
       <li class="prev">
         <div class="item">
-          <div
-            class="video-container container"
-            style="background-color: #fff; height: 380px"
-          >
+          <div class="video-container container" style="background-color: #fff">
             <div class="btn-container">
               <a href="#" class="btn">Download our pdf</a>
             </div>
             <div class="btn-container">
-              <a href="https://globalcaredevelopment.com/about/" class="btn"
+              <a
+                href="https://globalcaredevelopment.com/about/"
+                class="btn btn-small"
                 >Team</a
               >
-              <a href="https://globalcaredevelopment.com/" class="btn"
+              <a href="https://globalcaredevelopment.com/" class="btn btn-small"
                 ><img src="./img/globalCare.png" alt="globalCare"
               /></a>
             </div>
@@ -284,7 +403,10 @@
       <li class="new-next">
         <div class="item">
           <div class="text-container">
-            <p>And with the right incentives.</p>
+            <p>
+              And with the right <br />
+              incentives.
+            </p>
           </div>
           <div class="video-container">
             <img class="video" src="./img/video3.png" alt="img3" />
@@ -308,19 +430,13 @@
 
           const video = node.querySelector("video");
           if (video) {
-            // Якщо це активний слайд
             if (roles[i] === "act") {
-              // Якщо відео ще не грає, запускаємо
               if (video.paused) {
                 video.muted = true;
                 video.play().catch(() => {});
-                // Через 2 секунди включаємо звук
-                setTimeout(() => {
-                  video.muted = false;
-                }, 2000);
+                setTimeout(() => (video.muted = false), 2000);
               }
             } else {
-              // Якщо це не активний, ставимо на паузу
               video.pause();
               video.currentTime = 0;
             }
@@ -328,7 +444,6 @@
         });
       }
 
-      // Анімація тексту
       function animateText(el) {
         if (!el) return;
         const text = el.textContent;
@@ -336,8 +451,7 @@
         text.split("").forEach((char, i) => {
           const span = document.createElement("span");
           span.textContent = char === " " ? "\u00A0" : char;
-          span.style.animation = "bounceIn 0.6s forwards";
-          span.style.animationDelay = `${i * 0.05}s`;
+          span.style.animationDelay = `${i * 0.03}s`; // затримка по символах
           el.appendChild(span);
         });
       }
@@ -356,14 +470,14 @@
         updateTextAnimations();
       }
 
+      // Логіка свайпу: просто крутимо масив ролей
       function next() {
-        list.appendChild(nodes.shift());
-        nodes = Array.from(list.children);
+        roles.push(roles.shift()); // перший елемент ролі на кінець
         applyRolesWithText();
       }
+
       function prev() {
-        list.insertBefore(nodes.pop(), nodes[0]);
-        nodes = Array.from(list.children);
+        roles.unshift(roles.pop()); // останній елемент ролі на початок
         applyRolesWithText();
       }
 
@@ -404,6 +518,22 @@
 
       // Старт
       applyRolesWithText();
+
+      function applyDynamicScaling() {
+        const activeIndex = roles.indexOf("act");
+
+        nodes.forEach((node, i) => {
+          let distance = Math.abs(i - activeIndex);
+          if (distance > 2) distance = 2; // обмежуємо крайні
+          const scale = 1 - distance * 0.15; // 0.85, 0.7 ...
+
+          node.style.transform = `translateX(${
+            (i - activeIndex) * 100
+          }px) scale(${scale})`;
+          node.style.opacity = 1 - distance * 0.3; // крайні трохи прозорі
+          node.style.zIndex = 10 - distance;
+        });
+      }
     </script>
   </body>
 </html>
